--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
+                <button class="button-reset" onclick="reiniciarJuego()">Reiniciar Juego</button>
             </div>
         </section>
     </main>
